# BMSTU_IU7_5_SEM

./: README.md
AA/: README.md
AA/Lab_01/: CMakeLists.txt  levenstein.cpp  levenstein.h  main.cpp  profile.hpp
AA/Lab_01/report1/: report.aux  report.blg  report.tex  report.toc
AA/RK_1/: Blokhin_lab_01.docx
AVM/: Blokhin_lab_01.docx  Laboratornaya_rabota_2.docx  Laboratornaya_rabota_3.docx  Rep4.docx
AVM/Lab_01/: index.js  index_01.js  index_02.js  index_03.js  index_04.js  index_05.js  index_06.js  index_07.js  index_08.js  index_09.js  main.js  main_01_01.js  main_01_02.js  main_01_03.js  main_02_01.js  main_02_02.js  main_02_03.js  package-lock.json  package.json
AVM/Lab_02/: Dima.txt  a.html  a_04_01.html  a_04_02.html  a_04_03.html  a_04_04.html  aue.txt  combine.txt  data.txt  data1.txt  hint_01.js  hint_02.js  hint_04.js  hint_05.js  hint_06.js  hint_07.js  hint_08.js  hint_09.txt  hint_10.js  hint_11.js  hint_20.js  hint_22.js  input_03_02.txt  input_03_07.txt  input_04_02.txt  keklul.txt  lab_04_full.ts  main_03_01.js  main_03_02.js  main_03_03.js  main_03_05.js  main_03_06.js  main_03_07.js  main_04_01.js  main_04_02.js  main_04_03.js  main_04_04.js  main_anal_01.js  package-lock.json  package.json  (+2 more)
AVM/lab5/: fulltask.js  package.json  task1.txt
AVM/lab6/: index.js  package-lock.json  package.json
AVM/lab7/: package-lock.json  package.json  server_a.js  server_b.js  (+3 more)
CG_COURSE/: README.md
DB/: README.md
FIZRA/: README.md
OS/: Blokhin_D_M_LR3.docx  OS_lr2_Blokhin_D_M_IU7-52B_1.docx  os_5.docx  os_6.docx  os_lab1p2(2).docx  os_lr4.docx
(+91 files in other folders)
